[package]
name = "async-threadrr-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-threadrr = { path = "../async-threadrr", features = ["wasm"] }
js-sys = "0.3.57"
strum = { version = "0.24.0", features = ["derive"] }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
