[package]
name = "threadrr-wasm-example"
version = "0.1.0"
authors = ["Peter Viechter <zelberor.games@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.80"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

async-threadrr-wasm = { path = "../../async-threadrr-wasm" }
async-threadrr = { path = "../../async-threadrr" }
wasm-bindgen-futures = "0.4.30"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
