[package]
name = "threadrr-wasm-example"
version = "0.1.0"
authors = ["Peter Viechter <zelberor.games@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.80"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

async-threadrr-wasm = { path = "../../async-threadrr-wasm" }
async-threadrr = { path = "../../async-threadrr" }
wasm-bindgen-futures = "0.4.30"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

# Look in .cargo/config.toml for other profile settings

# https://rustwasm.github.io/wasm-pack/book/cargo-toml-configuration.html
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
	"-Os",
	"--enable-threads",
	"--enable-mutable-globals",
	"--enable-bulk-memory",
]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
